--- a/index.html
+++ b/index.html
@@ -4,8 +4,44 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Emergency Hotline</title>
+    <!-- tailwind & daisyUI cdn -->
+    <link href="https://cdn.jsdelivr.net/npm/daisyui@5" rel="stylesheet" type="text/css" />
+    <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+    <!-- font awesome cdn -->
+     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css" integrity="sha512-DxV+EoADOkOygM4IR9yXP8Sb2qwgidEmeqAEmDKIOfPRQZOWbXCzLC6vjbZyy0vPisbH2SyW27+ddLVCN+OMzQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+     <!-- style.css file -->
+    <link rel="stylesheet" href="styles/style.css">
 </head>
-<body>
-    
+<body class="bg-[#f5fff6]">
+    <header>
+        <!-- navbar -->
+        <section>
+            <nav class="flex justify-between w-11/12 mx-auto bg-white py-6">
+                <div class="flex items-center gap-3">
+                    <img src="./assets/logo.png" alt="" class="w-12">
+                    <p class="font-black text-xl text-green-800">Emergency <br> Service</p>
+                </div>
+                <div class="flex justify-between gap-2">
+                    <span class="w-[120px] h-[49px] bg-[#41FF6B] opacity-50 flex justify-center items-center gap-2 rounded-[50px]"><span class="font-black">0</span><img src="./assets/heart.png" alt="" class="w-8 h-8"></span>
+                    <span class="w-[120px] h-[49px] bg-[#41FF6B] opacity-50 flex justify-center items-center gap-2 rounded-[50px]"><span class="font-black">0</span><img src="./assets/coin.png" alt="" class="w-6 h-6"></span>
+                    <button class="w-[120px] h-[48px] bg-green-600 text-white px-6 py-3 rounded-[50px]">0 Copy</button>
+                </div>
+            </nav>
+        </section>
+        <!-- hero section -->
+        <section class="hero flex flex-col bg-gradient-to-r from-[#013223] via-[#006747] to-[#013223] py-[21px] mb-12">
+            <img src="./assets/logo-dark.png" alt="" class="w-28">
+            <div class="text-center text-white">
+                <h1 class="hind-madurai-normal font-bold text-[40px] my-3">Emergency Service Directory</h1>
+                <p class="hind-madurai-normal font-semibold text-xl">Government Emergency Services at Your Fingertip – A Project by  Government of the People’s Republic of Bangladesh</p>
+            </div>
+        </section>
+    </header>
+
+    <main>
+        
+    </main>
+
+    <script src="./js/script.js"></script>
 </body>
 </html>
