main section completed

--- a/index.html
+++ b/index.html
@@ -39,7 +39,201 @@
     </header>
 
     <main>
-        
+        <section class="w-11/12 mx-auto grid grid-cols-12 gap-4 mb-[86px]">
+            <div class="cards col-span-9 grid grid-cols-3 gap-4">
+                <div class="card bg-white px-4 py-6 rounded-xl">
+                    <div class="flex items-center gap-[180px]">
+                        <img src="./assets/emergency.png" alt="" class="w-[60px] bg-[#FFE3E2] rounded-2xl p-[14px]">
+                        <i class="fa-regular fa-heart"></i>
+                    </div>
+                    <div class="mt-4">
+                        <h2 class="hind-madurai-normal font-bold text-[18px] mb-[2px]">National Emergency Number</h2>
+                        <p class="roboto-normal font-normal text-[14px] text-[#5C5C5C]">National Emergency</p>
+                    </div>
+                    <div class="my-5">
+                        <h2 class="font-bold text-2xl mb-[4px]">999</h2>
+                        <p class="hind-madurai-normal w-[53px] bg-[#F2F2F2] text-[#5C5C5C] py-2 px-4 rounded-full">All</p>
+                    </div>
+                    <div>
+                        <button class="btn roboto-normal rounded-lg w-[130px]"><img src="./assets/copy.png" alt=""><span>Copy</span></button>
+
+                        <button class="btn roboto-normal bg-green-600 rounded-lg text-white w-[130px]"><img src="./assets/call.png" alt=""><span>Call</span></button>
+                    </div>
+                </div>
+                <div class="card bg-white px-4 py-6 rounded-xl">
+                    <div class="flex items-center gap-[180px]">
+                        <img src="./assets/police.png" alt="" class="w-[60px] bg-[#DFEFFF] rounded-2xl p-[14px]">
+                        <i class="fa-regular fa-heart"></i>
+                    </div>
+                    <div class="mt-4">
+                        <h2 class="hind-madurai-normal font-bold text-[18px] mb-[2px]">Police Helpline Number</h2>
+                        <p class="roboto-normal font-normal text-[14px] text-[#5C5C5C]">Police</p>
+                    </div>
+                    <div class="my-5">
+                        <h2 class="font-bold text-2xl mb-[4px]">999</h2>
+                        <p class="hind-madurai-normal w-[79px] bg-[#F2F2F2] text-[#5C5C5C] py-2 px-4 rounded-full">Police</p>
+                    </div>
+                    <div>
+                        <button class="btn roboto-normal rounded-lg w-[130px]"><img src="./assets/copy.png" alt=""><span>Copy</span></button>
+
+                        <button class="btn roboto-normal bg-green-600 rounded-lg text-white w-[130px]"><img src="./assets/call.png" alt=""><span>Call</span></button>
+                    </div>
+                </div>
+                <div class="card bg-white px-4 py-6 rounded-xl">
+                    <div class="flex items-center gap-[180px]">
+                        <img src="./assets/fire-service.png" alt="" class="w-[60px] bg-[#FFE3E2] rounded-2xl p-[14px]">
+                        <i class="fa-regular fa-heart"></i>
+                    </div>
+                    <div class="mt-4">
+                        <h2 class="hind-madurai-normal font-bold text-[18px] mb-[2px]">Fire Service Number</h2>
+                        <p class="roboto-normal font-normal text-[14px] text-[#5C5C5C]">Fire Service</p>
+                    </div>
+                    <div class="my-5">
+                        <h2 class="font-bold text-2xl mb-[4px]">999</h2>
+                        <p class="hind-madurai-normal w-14 bg-[#F2F2F2] text-[#5C5C5C] py-2 px-4 rounded-full">Fire</p>
+                    </div>
+                    <div>
+                        <button class="btn roboto-normal rounded-lg w-[130px]"><img src="./assets/copy.png" alt=""><span>Copy</span></button>
+
+                        <button class="btn roboto-normal bg-green-600 rounded-lg text-white w-[130px]"><img src="./assets/call.png" alt=""><span>Call</span></button>
+                    </div>
+                </div>
+                <div class="card bg-white px-4 py-6 rounded-xl">
+                    <div class="flex items-center gap-[180px]">
+                        <img src="./assets/ambulance.png" alt="" class="w-[60px] bg-[#FFE3E2] rounded-2xl p-[14px]">
+                        <i class="fa-regular fa-heart"></i>
+                    </div>
+                    <div class="mt-4">
+                        <h2 class="hind-madurai-normal font-bold text-[18px] mb-[2px]">Ambulance Service</h2>
+                        <p class="roboto-normal font-normal text-[14px] text-[#5C5C5C]">Ambulance</p>
+                    </div>
+                    <div class="my-5">
+                        <h2 class="font-bold text-2xl mb-[4px]">1994-999999</h2>
+                        <p class="hind-madurai-normal w-[83px] bg-[#F2F2F2] text-[#5C5C5C] py-2 px-4 rounded-full">Health</p>
+                    </div>
+                    <div>
+                        <button class="btn roboto-normal rounded-lg w-[130px]"><img src="./assets/copy.png" alt=""><span>Copy</span></button>
+
+                        <button class="btn roboto-normal bg-green-600 rounded-lg text-white w-[130px]"><img src="./assets/call.png" alt=""><span>Call</span></button>
+                    </div>
+                </div>
+                <div class="card bg-white px-4 py-6 rounded-xl">
+                    <div class="flex items-center gap-[180px]">
+                        <img src="./assets/emergency.png" alt="" class="w-[60px] bg-[#FFE3E2] rounded-2xl p-[14px]">
+                        <i class="fa-regular fa-heart"></i>
+                    </div>
+                    <div class="mt-4">
+                        <h2 class="hind-madurai-normal font-bold text-[18px] mb-[2px]">Women & Child Helpline</h2>
+                        <p class="roboto-normal font-normal text-[14px] text-[#5C5C5C]">Women & Child</p>
+                    </div>
+                    <div class="my-5">
+                        <h2 class="font-bold text-2xl mb-[4px]">109</h2>
+                        <p class="hind-madurai-normal w-[68px] bg-[#F2F2F2] text-[#5C5C5C] py-2 px-4 rounded-full">Help</p>
+                    </div>
+                    <div>
+                        <button class="btn roboto-normal rounded-lg w-[130px]"><img src="./assets/copy.png" alt=""><span>Copy</span></button>
+
+                        <button class="btn roboto-normal bg-green-600 rounded-lg text-white w-[130px]"><img src="./assets/call.png" alt=""><span>Call</span></button>
+                    </div>
+                </div>
+                <div class="card bg-white px-4 py-6 rounded-xl">
+                    <div class="flex items-center gap-[180px]">
+                        <img src="./assets/emergency.png" alt="" class="w-[60px] bg-[#FFE3E2] rounded-2xl p-[14px]">
+                        <i class="fa-regular fa-heart"></i>
+                    </div>
+                    <div class="mt-4">
+                        <h2 class="hind-madurai-normal font-bold text-[18px] mb-[2px]">Anti-Corruption Helpline</h2>
+                        <p class="roboto-normal font-normal text-[14px] text-[#5C5C5C]">Anti-Corruption</p>
+                    </div>
+                    <div class="my-5">
+                        <h2 class="font-bold text-2xl mb-[4px]">106</h2>
+                        <p class="hind-madurai-normal w-[73px] bg-[#F2F2F2] text-[#5C5C5C] py-2 px-4 rounded-full">Govt.</p>
+                    </div>
+                    <div>
+                        <button class="btn roboto-normal rounded-lg w-[130px]"><img src="./assets/copy.png" alt=""><span>Copy</span></button>
+
+                        <button class="btn roboto-normal bg-green-600 rounded-lg text-white w-[130px]"><img src="./assets/call.png" alt=""><span>Call</span></button>
+                    </div>
+                </div>
+                <div class="card bg-white px-4 py-6 rounded-xl">
+                    <div class="flex items-center gap-[180px]">
+                        <img src="./assets/emergency.png" alt="" class="w-[60px] bg-[#FFE3E2] rounded-2xl p-[14px]">
+                        <i class="fa-regular fa-heart"></i>
+                    </div>
+                    <div class="mt-4">
+                        <h2 class="hind-madurai-normal font-bold text-[18px] mb-[2px]">Electricity Helpline</h2>
+                        <p class="roboto-normal font-normal text-[14px] text-[#5C5C5C]">Electricity Outage</p>
+                    </div>
+                    <div class="my-5">
+                        <h2 class="font-bold text-2xl mb-[4px]">16216</h2>
+                        <p class="hind-madurai-normal w-[109px] bg-[#F2F2F2] text-[#5C5C5C] py-2 px-4 rounded-full">Electricity</p>
+                    </div>
+                    <div>
+                        <button class="btn roboto-normal rounded-lg w-[130px]"><img src="./assets/copy.png" alt=""><span>Copy</span></button>
+
+                        <button class="btn roboto-normal bg-green-600 rounded-lg text-white w-[130px]"><img src="./assets/call.png" alt=""><span>Call</span></button>
+                    </div>
+                </div>
+                <div class="card bg-white px-4 py-6 rounded-xl">
+                    <div class="flex items-center gap-[180px]">
+                        <img src="./assets/emergency.png" alt="" class="w-[60px] bg-[#FFE3E2] rounded-2xl p-[14px]">
+                        <i class="fa-regular fa-heart"></i>
+                    </div>
+                    <div class="mt-4">
+                        <h2 class="hind-madurai-normal font-bold text-[18px] mb-[2px]">Brac Helpline</h2>
+                        <p class="roboto-normal font-normal text-[14px] text-[#5C5C5C]">Brac</p>
+                    </div>
+                    <div class="my-5">
+                        <h2 class="font-bold text-2xl mb-[4px]">16445</h2>
+                        <p class="hind-madurai-normal w-[69px] bg-[#F2F2F2] text-[#5C5C5C] py-2 px-4 rounded-full">NGO</p>
+                    </div>
+                    <div>
+                        <button class="btn roboto-normal rounded-lg w-[130px]"><img src="./assets/copy.png" alt=""><span>Copy</span></button>
+
+                        <button class="btn roboto-normal bg-green-600 rounded-lg text-white w-[130px]"><img src="./assets/call.png" alt=""><span>Call</span></button>
+                    </div>
+                </div>
+                <div class="card bg-white px-4 py-6 rounded-xl">
+                    <div class="flex items-center gap-[180px]">
+                        <img src="./assets/emergency.png" alt="" class="w-[60px] bg-[#FFE3E2] rounded-2xl p-[14px]">
+                        <i class="fa-regular fa-heart"></i>
+                    </div>
+                    <div class="mt-4">
+                        <h2 class="hind-madurai-normal font-bold text-[18px] mb-[2px]">Bangladesh Railway Helpline</h2>
+                        <p class="roboto-normal font-normal text-[14px] text-[#5C5C5C]">Bangladesh Railway</p>
+                    </div>
+                    <div class="my-5">
+                        <h2 class="font-bold text-2xl mb-[4px]">163</h2>
+                        <p class="hind-madurai-normal w-[79px] bg-[#F2F2F2] text-[#5C5C5C] py-2 px-4 rounded-full">Travel</p>
+                    </div>
+                    <div>
+                        <button class="btn roboto-normal rounded-lg w-[130px]"><img src="./assets/copy.png" alt=""><span>Copy</span></button>
+
+                        <button class="btn roboto-normal bg-green-600 rounded-lg text-white w-[130px]"><img src="./assets/call.png" alt=""><span>Call</span></button>
+                    </div>
+                </div>
+            </div>
+
+            <div class="history col-span-3 bg-white pt-4 px-4 rounded-xl">
+                <div class="flex justify-between items-center">
+                    <div class="flex gap-2">
+                        <img src="./assets/clock.png" alt="" class="w-6 h-6">
+                        <p class="font-semibold text-[#111111]">Call History</p>
+                    </div>
+                    <button class="w-[114px] bg-green-600 font-medium text-white py-2 px-8 rounded-[50px]">Clear</button>
+                </div>
+
+                <div class="mt-4">
+                    <div class="flex justify-between items-center px-2 py-2 bg-[#fafafa] rounded-lg">
+                        <div>
+                            <h3 class="hind-madurai-normal font-bold">Fire Service Number</h3>
+                            <p>999</p>
+                        </div>
+                        <p>11:36:58 AM</p>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 
     <script src="./js/script.js"></script>
