--- a/index.html
+++ b/index.html
@@ -48,16 +48,16 @@
                     </div>
                     <div class="mt-4">
                         <h2 class="hind-madurai-normal font-bold text-[18px] mb-[2px]">National Emergency Number</h2>
-                        <p class="roboto-normal font-normal text-[14px] text-[#5C5C5C]">National Emergency</p>
+                        <p class="roboto-normal font-normal text-[14px] text-[#5C5C5C] title">National Emergency</p>
                     </div>
                     <div class="my-5">
-                        <h2 class="roboto-normal font-bold text-2xl mb-[4px]">999</h2>
+                        <h2 class="roboto-normal font-bold text-2xl mb-[4px] number">999</h2>
                         <p class="hind-madurai-normal w-[53px] bg-[#F2F2F2] text-[#5C5C5C] py-2 px-4 rounded-full">All</p>
                     </div>
                     <div>
-                        <button class="btn roboto-normal rounded-lg w-[175px] md:w-[130px]"><img src="./assets/copy.png" alt=""><span>Copy</span></button>
+                        <button class="btn roboto-normal rounded-lg w-[160px] md:w-[130px]"><img src="./assets/copy.png" alt=""><span>Copy</span></button>
 
-                        <button class="btn roboto-normal bg-green-600 rounded-lg text-white w-[175px] md:w-[130px]"><img src="./assets/call.png" alt=""><span>Call</span></button>
+                        <button class="btn roboto-normal bg-green-600 rounded-lg text-white w-[160px] md:w-[130px] btn-call"><img src="./assets/call.png" alt=""><span>Call</span></button>
                     </div>
                 </div>
                 <div class="card bg-white px-4 py-6 rounded-xl">
@@ -67,16 +67,16 @@
                     </div>
                     <div class="mt-4">
                         <h2 class="hind-madurai-normal font-bold text-[18px] mb-[2px]">Police Helpline Number</h2>
-                        <p class="roboto-normal font-normal text-[14px] text-[#5C5C5C]">Police</p>
+                        <p class="roboto-normal font-normal text-[14px] text-[#5C5C5C] title">Police</p>
                     </div>
                     <div class="my-5">
-                        <h2 class="roboto-normal font-bold text-2xl mb-[4px]">999</h2>
+                        <h2 class="roboto-normal font-bold text-2xl mb-[4px] number">999</h2>
                         <p class="hind-madurai-normal w-[79px] bg-[#F2F2F2] text-[#5C5C5C] py-2 px-4 rounded-full">Police</p>
                     </div>
                     <div>
-                        <button class="btn roboto-normal rounded-lg w-[175px] md:w-[130px]"><img src="./assets/copy.png" alt=""><span>Copy</span></button>
+                        <button class="btn roboto-normal rounded-lg w-[160px] md:w-[130px]"><img src="./assets/copy.png" alt=""><span>Copy</span></button>
 
-                        <button class="btn roboto-normal bg-green-600 rounded-lg text-white w-[175px] md:w-[130px]"><img src="./assets/call.png" alt=""><span>Call</span></button>
+                        <button class="btn roboto-normal bg-green-600 rounded-lg text-white w-[160px] md:w-[130px] btn-call"><img src="./assets/call.png" alt=""><span>Call</span></button>
                     </div>
                 </div>
                 <div class="card bg-white px-4 py-6 rounded-xl">
@@ -86,16 +86,16 @@
                     </div>
                     <div class="mt-4">
                         <h2 class="hind-madurai-normal font-bold text-[18px] mb-[2px]">Fire Service Number</h2>
-                        <p class="roboto-normal font-normal text-[14px] text-[#5C5C5C]">Fire Service</p>
+                        <p class="roboto-normal font-normal text-[14px] text-[#5C5C5C] title">Fire Service</p>
                     </div>
                     <div class="my-5">
-                        <h2 class="roboto-normal font-bold text-2xl mb-[4px]">999</h2>
+                        <h2 class="roboto-normal font-bold text-2xl mb-[4px] number">999</h2>
                         <p class="hind-madurai-normal w-14 bg-[#F2F2F2] text-[#5C5C5C] py-2 px-4 rounded-full">Fire</p>
                     </div>
                     <div>
-                        <button class="btn roboto-normal rounded-lg w-[175px] md:w-[130px]"><img src="./assets/copy.png" alt=""><span>Copy</span></button>
+                        <button class="btn roboto-normal rounded-lg w-[160px] md:w-[130px]"><img src="./assets/copy.png" alt=""><span>Copy</span></button>
 
-                        <button class="btn roboto-normal bg-green-600 rounded-lg text-white w-[175px] md:w-[130px]"><img src="./assets/call.png" alt=""><span>Call</span></button>
+                        <button class="btn roboto-normal bg-green-600 rounded-lg text-white w-[160px] md:w-[130px] btn-call"><img src="./assets/call.png" alt=""><span>Call</span></button>
                     </div>
                 </div>
                 <div class="card bg-white px-4 py-6 rounded-xl">
@@ -105,16 +105,16 @@
                     </div>
                     <div class="mt-4">
                         <h2 class="hind-madurai-normal font-bold text-[18px] mb-[2px]">Ambulance Service</h2>
-                        <p class="roboto-normal font-normal text-[14px] text-[#5C5C5C]">Ambulance</p>
+                        <p class="roboto-normal font-normal text-[14px] text-[#5C5C5C] title">Ambulance</p>
                     </div>
                     <div class="my-5">
-                        <h2 class="roboto-normal font-bold text-2xl mb-[4px]">1994-999999</h2>
+                        <h2 class="roboto-normal font-bold text-2xl mb-[4px] number">1994-999999</h2>
                         <p class="hind-madurai-normal w-[83px] bg-[#F2F2F2] text-[#5C5C5C] py-2 px-4 rounded-full">Health</p>
                     </div>
                     <div>
-                        <button class="btn roboto-normal rounded-lg w-[175px] md:w-[130px]"><img src="./assets/copy.png" alt=""><span>Copy</span></button>
+                        <button class="btn roboto-normal rounded-lg w-[160px] md:w-[130px]"><img src="./assets/copy.png" alt=""><span>Copy</span></button>
 
-                        <button class="btn roboto-normal bg-green-600 rounded-lg text-white w-[175px] md:w-[130px]"><img src="./assets/call.png" alt=""><span>Call</span></button>
+                        <button class="btn roboto-normal bg-green-600 rounded-lg text-white w-[160px] md:w-[130px] btn-call"><img src="./assets/call.png" alt=""><span>Call</span></button>
                     </div>
                 </div>
                 <div class="card bg-white px-4 py-6 rounded-xl">
@@ -124,16 +124,16 @@
                     </div>
                     <div class="mt-4">
                         <h2 class="hind-madurai-normal font-bold text-[18px] mb-[2px]">Women & Child Helpline</h2>
-                        <p class="roboto-normal font-normal text-[14px] text-[#5C5C5C]">Women & Child</p>
+                        <p class="roboto-normal font-normal text-[14px] text-[#5C5C5C] title">Women & Child</p>
                     </div>
                     <div class="my-5">
-                        <h2 class="roboto-normal font-bold text-2xl mb-[4px]">109</h2>
+                        <h2 class="roboto-normal font-bold text-2xl mb-[4px] number">109</h2>
                         <p class="hind-madurai-normal w-[68px] bg-[#F2F2F2] text-[#5C5C5C] py-2 px-4 rounded-full">Help</p>
                     </div>
                     <div>
-                        <button class="btn roboto-normal rounded-lg w-[175px] md:w-[130px]"><img src="./assets/copy.png" alt=""><span>Copy</span></button>
+                        <button class="btn roboto-normal rounded-lg w-[160px] md:w-[130px]"><img src="./assets/copy.png" alt=""><span>Copy</span></button>
 
-                        <button class="btn roboto-normal bg-green-600 rounded-lg text-white w-[175px] md:w-[130px]"><img src="./assets/call.png" alt=""><span>Call</span></button>
+                        <button class="btn roboto-normal bg-green-600 rounded-lg text-white w-[160px] md:w-[130px] btn-call"><img src="./assets/call.png" alt=""><span>Call</span></button>
                     </div>
                 </div>
                 <div class="card bg-white px-4 py-6 rounded-xl">
@@ -143,16 +143,16 @@
                     </div>
                     <div class="mt-4">
                         <h2 class="hind-madurai-normal font-bold text-[18px] mb-[2px]">Anti-Corruption Helpline</h2>
-                        <p class="roboto-normal font-normal text-[14px] text-[#5C5C5C]">Anti-Corruption</p>
+                        <p class="roboto-normal font-normal text-[14px] text-[#5C5C5C] title">Anti-Corruption</p>
                     </div>
                     <div class="my-5">
-                        <h2 class="roboto-normal font-bold text-2xl mb-[4px]">106</h2>
+                        <h2 class="roboto-normal font-bold text-2xl mb-[4px] number">106</h2>
                         <p class="hind-madurai-normal w-[73px] bg-[#F2F2F2] text-[#5C5C5C] py-2 px-4 rounded-full">Govt.</p>
                     </div>
                     <div>
-                        <button class="btn roboto-normal rounded-lg w-[175px] md:w-[130px]"><img src="./assets/copy.png" alt=""><span>Copy</span></button>
+                        <button class="btn roboto-normal rounded-lg w-[160px] md:w-[130px]"><img src="./assets/copy.png" alt=""><span>Copy</span></button>
 
-                        <button class="btn roboto-normal bg-green-600 rounded-lg text-white w-[175px] md:w-[130px]"><img src="./assets/call.png" alt=""><span>Call</span></button>
+                        <button class="btn roboto-normal bg-green-600 rounded-lg text-white w-[160px] md:w-[130px] btn-call"><img src="./assets/call.png" alt=""><span>Call</span></button>
                     </div>
                 </div>
                 <div class="card bg-white px-4 py-6 rounded-xl">
@@ -162,16 +162,16 @@
                     </div>
                     <div class="mt-4">
                         <h2 class="hind-madurai-normal font-bold text-[18px] mb-[2px]">Electricity Helpline</h2>
-                        <p class="roboto-normal font-normal text-[14px] text-[#5C5C5C]">Electricity Outage</p>
+                        <p class="roboto-normal font-normal text-[14px] text-[#5C5C5C] title">Electricity Outage</p>
                     </div>
                     <div class="my-5">
-                        <h2 class="roboto-normal font-bold text-2xl mb-[4px]">16216</h2>
+                        <h2 class="roboto-normal font-bold text-2xl mb-[4px] number">16216</h2>
                         <p class="hind-madurai-normal w-[109px] bg-[#F2F2F2] text-[#5C5C5C] py-2 px-4 rounded-full">Electricity</p>
                     </div>
                     <div>
-                        <button class="btn roboto-normal rounded-lg w-[175px] md:w-[130px]"><img src="./assets/copy.png" alt=""><span>Copy</span></button>
+                        <button class="btn roboto-normal rounded-lg w-[160px] md:w-[130px]"><img src="./assets/copy.png" alt=""><span>Copy</span></button>
 
-                        <button class="btn roboto-normal bg-green-600 rounded-lg text-white w-[175px] md:w-[130px]"><img src="./assets/call.png" alt=""><span>Call</span></button>
+                        <button class="btn roboto-normal bg-green-600 rounded-lg text-white w-[160px] md:w-[130px] btn-call"><img src="./assets/call.png" alt=""><span>Call</span></button>
                     </div>
                 </div>
                 <div class="card bg-white px-4 py-6 rounded-xl">
@@ -181,16 +181,16 @@
                     </div>
                     <div class="mt-4">
                         <h2 class="hind-madurai-normal font-bold text-[18px] mb-[2px]">Brac Helpline</h2>
-                        <p class="roboto-normal font-normal text-[14px] text-[#5C5C5C]">Brac</p>
+                        <p class="roboto-normal font-normal text-[14px] text-[#5C5C5C] title">Brac</p>
                     </div>
                     <div class="my-5">
-                        <h2 class="roboto-normal font-bold text-2xl mb-[4px]">16445</h2>
+                        <h2 class="roboto-normal font-bold text-2xl mb-[4px] number">16445</h2>
                         <p class="hind-madurai-normal w-[69px] bg-[#F2F2F2] text-[#5C5C5C] py-2 px-4 rounded-full">NGO</p>
                     </div>
                     <div>
-                        <button class="btn roboto-normal rounded-lg w-[175px] md:w-[130px]"><img src="./assets/copy.png" alt=""><span>Copy</span></button>
+                        <button class="btn roboto-normal rounded-lg w-[160px] md:w-[130px]"><img src="./assets/copy.png" alt=""><span>Copy</span></button>
 
-                        <button class="btn roboto-normal bg-green-600 rounded-lg text-white w-[175px] md:w-[130px]"><img src="./assets/call.png" alt=""><span>Call</span></button>
+                        <button class="btn roboto-normal bg-green-600 rounded-lg text-white w-[160px] md:w-[130px] btn-call"><img src="./assets/call.png" alt=""><span>Call</span></button>
                     </div>
                 </div>
                 <div class="card bg-white px-4 py-6 rounded-xl">
@@ -200,16 +200,16 @@
                     </div>
                     <div class="mt-4">
                         <h2 class="hind-madurai-normal font-bold text-[18px] mb-[2px]">Bangladesh Railway Helpline</h2>
-                        <p class="roboto-normal font-normal text-[14px] text-[#5C5C5C]">Bangladesh Railway</p>
+                        <p class="roboto-normal font-normal text-[14px] text-[#5C5C5C] title">Bangladesh Railway</p>
                     </div>
                     <div class="my-5">
-                        <h2 class="roboto-normal font-bold text-2xl mb-[4px]">163</h2>
+                        <h2 class="roboto-normal font-bold text-2xl mb-[4px] number">163</h2>
                         <p class="hind-madurai-normal w-[79px] bg-[#F2F2F2] text-[#5C5C5C] py-2 px-4 rounded-full">Travel</p>
                     </div>
                     <div>
-                        <button class="btn roboto-normal rounded-lg w-[175px] md:w-[130px]"><img src="./assets/copy.png" alt=""><span>Copy</span></button>
+                        <button class="btn roboto-normal rounded-lg w-[160px] md:w-[130px]"><img src="./assets/copy.png" alt=""><span>Copy</span></button>
 
-                        <button class="btn roboto-normal bg-green-600 rounded-lg text-white w-[175px] md:w-[130px]"><img src="./assets/call.png" alt=""><span>Call</span></button>
+                        <button class="btn roboto-normal bg-green-600 rounded-lg text-white w-[160px] md:w-[130px] btn-call"><img src="./assets/call.png" alt=""><span>Call</span></button>
                     </div>
                 </div>
             </div>
@@ -220,18 +220,10 @@
                         <img src="./assets/clock.png" alt="" class="w-6 h-6">
                         <p class="font-semibold text-[#111111]">Call History</p>
                     </div>
-                    <button class="w-[114px] bg-green-600 font-medium text-white py-2 px-8 rounded-[50px]">Clear</button>
+                    <button id="btn-clear" class="w-[114px] bg-green-600 font-medium text-white py-2 px-8 rounded-[50px]">Clear</button>
                 </div>
 
-                <div class="mt-4">
-                    <div class="flex justify-between items-center px-2 py-2 bg-[#fafafa] rounded-lg">
-                        <div>
-                            <h3 class="hind-madurai-normal font-bold">Fire Service Number</h3>
-                            <p>999</p>
-                        </div>
-                        <p>11:36:58 AM</p>
-                    </div>
-                </div>
+                <div id="history-container" class="mt-4"></div>
             </div>
         </section>
     </main>
