fixed some minor issues

--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
                 </div>
                 <div class="card bg-white px-4 py-6 rounded-xl shadow-md">
                     <div class="flex justify-between items-center md:gap-[180px]">
-                        <img src="./assets/brac.png" alt="" class="w-[60px] bg-[#FFE3E2] rounded-2xl p-[14px]">
+                        <img src="./assets/brac.png" alt="" class="w-[60px] bg-pink-100 rounded-2xl p-[14px]">
                         <i class="fa-regular fa-heart btn-heart"></i>
                     </div>
                     <div class="mt-4">
@@ -195,7 +195,7 @@
                 </div>
                 <div class="card bg-white px-4 py-6 rounded-xl shadow-md">
                     <div class="flex justify-between items-center md:gap-[180px]">
-                        <img src="./assets/Bangladesh-Railway.png" alt="" class="w-[60px] bg-[#FFE3E2] rounded-2xl p-[14px]">
+                        <img src="./assets/Bangladesh-Railway.png" alt="" class="w-[60px] bg-amber-100 rounded-2xl p-[14px]">
                         <i class="fa-regular fa-heart btn-heart"></i>
                     </div>
                     <div class="mt-4">
@@ -214,7 +214,7 @@
                 </div>
             </div>
 
-            <div class="history md:col-span-3 bg-white pt-4 px-4 rounded-xl">
+            <div class="history md:col-span-3 bg-white pt-4 px-4 rounded-xl shadow-md">
                 <div class="flex justify-between items-center">
                     <div class="flex gap-2">
                         <img src="./assets/clock.png" alt="" class="w-6 h-6">
